# claimz-project

./: .gitignore  README.md  manage.py  pyproject.toml
claims/: const.py
claims/migrations/: 0001_initial.py  0002_claims_amount.py  0003_claims_status_alter_claimslogs_claim.py
claims/models/: __init__.py  managers.py  validators.py
claimzproject/: asgi.py  settings.py  urls.py  wsgi.py
claimzproject/templates/: base.html  home.html
claimzproject/templates/admin/: action-claims.html  list-claims.html  report.html
claimzproject/templates/dashboard/: base-create-view.html  base-dashboard.html  claims-category-list.html  delete-claims.html  detail-claims.html  duplicate-claims.html  home.html  list-claims.html
claimzproject/templates/registration/: login.html
claimzproject/templates/widgets/: action-logs.html  admin-action-badge.html  date.html  numeric.html  pagination.html  user-status-badge.html
claimzproject/views/: admin.py  auth.py  dashboard.py  forms.py
seed/management/commands/: seed.py
